# todo-ai-chatbot-p3

./: .env.template  .gitignore  CLAUDE.md  CONSTITUTION.md  HACKATHON_READY.md  LOCAL_DEVELOPMENT.md  PHASE2_COMPLETE.md  PHASE2_START_GUIDE.md  PHASE3_COMPLETE.md  PHASE_4_MASTER_SPEC.md  README.md  START_HERE.md  build_project.py  desktop.ini  package.json  pyproject.toml  start-backend.bat  start-frontend.bat
.spec-kit/: config.yaml
.specify/memory/: constitution.md
.specify/spec/: spec.md
.specify/templates/: spec-template.md
backend/: .dockerignore  Dockerfile  Dockerfile.k8s  main.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/mcp_server/: __init__.py  server.py  tools.py
backend/app/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/app/routers/: __init__.py  auth.py  chat.py  conversations.py  dashboard.py
backend/app/services/: __init__.py  agent.py
frontend/: .dockerignore  Dockerfile.k8s  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api-service.ts  auth-client.ts  useAuth.ts
history/prompts/: 02-specifications.md  03-planning.md  04-tasks.md  05-implementation-start.md  06-db-connection.md  07-models-migrations.md  08-auth-api-setup.md  09-task-crud-setup.md  10-frontend-ui-setup.md  11-task-categorization.md  12-final-polish.md  (+4 more)
k8s/: QUICKSTART.md  README.md  aiops-commands.md
specs/: ai_chatbot_spec.md
(+68 files in other folders)
