[project]
name = "todo-ai-chatbot"
version = "1.0.0"
description = "Phase III - AI-powered Task Management Chatbot with Gemini"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlmodel>=0.0.14",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.4.0",
    "httpx>=0.26.0",
    "sse-starlette>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
packages = ["app"]
